[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/menu/menu buttons/newGame100.png" type="Texture" id=1]
[ext_resource path="res://src/StartingScreen/ButtonsContainer.gd" type="Script" id=2]
[ext_resource path="res://src/StartingScreen/Starting.gd" type="Script" id=3]
[ext_resource path="res://assets/menu/menu buttons/oldGame80.png" type="Texture" id=4]
[ext_resource path="res://src/StartingScreen/Background.gd" type="Script" id=5]
[ext_resource path="res://assets/menu/menu buttons/oldGame50.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/menu buttons/newGame50.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/menu buttons/newGame80.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/starting screen.png" type="Texture" id=9]
[ext_resource path="res://src/Screens/PanelFade.gd" type="Script" id=10]
[ext_resource path="res://assets/menu/menu buttons/settings50.png" type="Texture" id=11]
[ext_resource path="res://assets/menu/menu buttons/settings100.png" type="Texture" id=12]
[ext_resource path="res://assets/menu/menu buttons/settings80.png" type="Texture" id=13]
[ext_resource path="res://assets/menu/menu buttons/about100.png" type="Texture" id=14]
[ext_resource path="res://assets/menu/menu buttons/about50.png" type="Texture" id=15]
[ext_resource path="res://assets/menu/menu buttons/about80.png" type="Texture" id=16]
[ext_resource path="res://assets/music/1min-2021-08-16_-_8_Bit_Adventure_-_www.FesliyanStudios.com.wav" type="AudioStream" id=17]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
process_priority = -4
modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.88, 15.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2D Node" type="Node2D" parent="."]

[node name="background" type="KinematicBody2D" parent="2D Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="2D Node/background"]
position = Vector2( 501.375, 909.4 )
scale = Vector2( 3.72387, 3.72387 )
texture = ExtResource( 9 )

[node name="ButtonsContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="ButtonsContainer"]
margin_left = 65.0
margin_top = 77.0
margin_right = 116.0
margin_bottom = 122.0
rect_scale = Vector2( 5.24, 1.51849 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OldGame" type="TextureButton" parent="ButtonsContainer"]
margin_left = 65.0
margin_top = 170.0
margin_right = 116.0
margin_bottom = 214.0
rect_scale = Vector2( 5.24, 1.51849 )
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="ButtonsContainer"]
margin_left = 65.0
margin_top = 259.0
margin_right = 116.0
margin_bottom = 303.0
rect_scale = Vector2( 5.24, 1.51849 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="TextureButton" parent="ButtonsContainer"]
margin_left = 65.0
margin_top = 348.0
margin_right = 116.0
margin_bottom = 392.0
rect_scale = Vector2( 5.24, 1.51849 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
process_priority = -4
modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.88, 15.2 )
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introText" type="Control" parent="Panel2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_editor_description_": "Just ignore this lmaoo"
}

[node name="exitText" type="Control" parent="Panel2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_editor_description_": "Just ignore this lmaoo"
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
autoplay = true

[connection signal="fadeIn" from="." to="Panel2" method="_on_Control_fadeIn"]
[connection signal="newGame" from="2D Node/background" to="." method="_on_background_newGame"]
[connection signal="pressed" from="ButtonsContainer/NewGame" to="2D Node/background" method="_on_NewGame_pressed"]
[connection signal="pressed" from="ButtonsContainer/NewGame" to="ButtonsContainer" method="_on_NewGame_pressed"]
[connection signal="pressed" from="ButtonsContainer/About" to="Panel2" method="_on_About_pressed"]
